--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,81 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+                body {
+                    margin: 0;
+                    padding: 0;
+                    font-weight: 400;
+                    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+                    -webkit-font-smoothing: antialiased;
+                    -moz-osx-font-smoothing: grayscale;
+                    font-size: 16px;
+                }
+                
+                h1 a {
+                    font-size: 1.8rem;
+                    color: #b38e5d;
+                }
+                
+                h1 a.text-light:hover {
+                    color: #d4c19c!important;
+                    text-decoration: none!important;
+                }
+                
+                .navbar {
+                    background: #13322b;
+                }
+                
+                .container h1 {
+                    color: #d4c19c;
+                }
+                
+                .nuevo-post {
+                    font-weight: bold;
+                    text-transform: uppercase;
+                }
+                
+                .btn {
+                    font-weight: bold;
+                    border-color: #b38e5d;
+                }
+                
+                .form-group label,
+                .list-group-item {
+                    font-size: 1.4rem;
+                }
+                
+                .navbar .btn {
+                    flex: 1;
+                }
+                
+                @media (min-width:768px) {
+                    .navbar .btn {
+                        flex: 0 1 auto;
+                    }
+                }
+                
+                .acciones {
+                    margin: 1rem 0;
+                }
+                
+                @media (min-width:768px) {
+                    .acciones {
+                        margin: 0;
+                    }
+                }
+                
+                .acciones>* {
+                    flex: 1;
+                }
+                
+                .btn-np {
+                    background: #621132;
+                }
+                
+                .bg_producto {
+                    background-color: #621132;
+                    color: #ffffff;
+                }
+                
+                .alert {
+                    background-color: #9d2449;
+                    color: #ffffff;
+                    font-weight: bold;
+                }
