--- a/src/index.css
+++ b/src/index.css
@@ -79,3 +79,68 @@
                     color: #ffffff;
                     font-weight: bold;
                 }
+                
+                .btn__editar {
+                    background-color: #285c4d;
+                    color: #ffffff;
+                    font-weight: bold;
+                }
+                
+                .btn__eliminar {
+                    background-color: #9d2449;
+                    color: #ffffff;
+                    font-weight: bold;
+                }
+                
+                .confirmButtonColor {
+                    background-color: #d4c19c;
+                }
+                
+                .spinner {
+                    width: 40px;
+                    height: 40px;
+                    position: relative;
+                    margin: 30px auto;
+                    margin-bottom: 30px;
+                }
+                
+                .double-bounce1,
+                .double-bounce2 {
+                    width: 100%;
+                    height: 100%;
+                    border-radius: 50%;
+                    background-color: #d4c19c;
+                    opacity: 0.6;
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    -webkit-animation: sk-bounce 2.0s infinite ease-in-out;
+                    animation: sk-bounce 2.0s infinite ease-in-out;
+                }
+                
+                .double-bounce2 {
+                    -webkit-animation-delay: -1.0s;
+                    animation-delay: -1.0s;
+                }
+                
+                @-webkit-keyframes sk-bounce {
+                    0%,
+                    100% {
+                        -webkit-transform: scale(0.0)
+                    }
+                    50% {
+                        -webkit-transform: scale(1.0)
+                    }
+                }
+                
+                @keyframes sk-bounce {
+                    0%,
+                    100% {
+                        transform: scale(0.0);
+                        -webkit-transform: scale(0.0);
+                    }
+                    50% {
+                        transform: scale(1.0);
+                        -webkit-transform: scale(1.0);
+                    }
+                }
